--- a/Lustrious/Views/Produto/Index.cshtml
+++ b/Lustrious/Views/Produto/Index.cshtml
@@ -27,7 +27,7 @@ else
  <tr>
  <td>@p.CodigoBarras</td>
  <td>@p.NomeProd</td>
- <td>@p.qtd</td>
+ <td>@p.Qtd</td>
  <td>@p.Genero</td>
  <td>@p.ValorUnitario.ToString("C")</td>
  <td>
